Convert gif back to img tag

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
-import Logo from "../assets/LogoCycles.gif";
-import { Image } from "astro:assets";
 ---
 
 <Layout title="Home">
-  <Image src={Logo} alt={"Logo"} />
+  <img src="/LogoCycles.gif" alt="Logo" />
 </Layout>
