Moved gif to webm

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ const { title } = Astro.props;
     >
     </div>
     <Nav client:load />
-    <div class="relative">
+    <div class="relative px-8">
       <slot />
     </div>
   </body>
