--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Pricing">
   <section class="body-font mb-12">
-    <div class="container mx-auto px-5 py-12">
+    <div class="py-12">
       <div class="flex w-full flex-col text-center">
         <h1
           class="title-font mb-2 text-3xl font-medium text-orange-600 sm:text-4xl"
