Change logo to webp

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,5 @@ import bg from "../assets/HomepageBg.webp";
 ---
 
 <Layout title="Home">
-  <Image src={bg} alt="HomepageBg" />
-  <video src="/LogoCycles.webm" loop autoplay></video>
+<img src="/LogoCycles.webp" alt="">
 </Layout>
