--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import { Image } from "astro:assets";
+import Image from "astro/components/Image.astro";
 import Layout from "../layouts/Layout.astro";
-import bg from "../assets/HomepageBg.webp";
+import Logo from "../assets/LogoCycles.gif";
 ---
 
 <Layout title="Home">
-<img src="/LogoCycles.webp" alt="">
+  <Image src={Logo} alt="Logo" />
 </Layout>
