--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,4 +6,5 @@ import Logo from "../assets/LogoCycles.gif";
 
 <Layout title="Home">
   <Image src={Logo} alt="Logo" />
+  <img src="/LogoCycles.webp" alt="">
 </Layout>
