--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Image from "astro/components/Image.astro";
 import Layout from "../layouts/Layout.astro";
-import Logo from "../assets/LogoCycles.gif";
+import Logo from "../../public/LogoCycles.gif";
 ---
 
 <Layout title="Home">
