--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
 import Image from "astro/components/Image.astro";
 import Layout from "../layouts/Layout.astro";
-import Logo from "../../public/LogoCycles.gif";
+import Logo from "../../public/LogoCycles.webp";
 ---
 
 <Layout title="Home">
   <Image src={Logo} alt="Logo" />
-  <img src="/LogoCycles.webp" alt="">
 </Layout>
