--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ const { title } = Astro.props;
     >
     </div>
     <Nav client:load />
-    <div class="relative px-8">
+    <div class="relative px-8 my-12 md:my-24">
       <slot />
     </div>
   </body>
