--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Pricing">
+<Layout title="Farrell Fitness | Membership">
   <section class="body-font mb-12">
     <div class="py-12">
       <div class="flex w-full flex-col text-center">
