--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,13 @@
 ---
-import Nav from "../components/Nav";
 import "@fontsource/roboto/100.css";
 import "@fontsource/roboto/300.css";
 import "@fontsource/roboto/400.css";
 import "@fontsource/roboto/500.css";
 import "@fontsource/roboto/700.css";
 import "@fontsource/roboto/900.css";
+
+import Nav from "../components/Nav";
+import Footer from "../components/Footer.astro";
 
 export interface Props {
   title: string;
@@ -32,7 +34,7 @@ const { title } = Astro.props;
   </head>
 
   <body
-    class="container mx-auto mt-4 max-w-5xl bg-slate-950 font-black uppercase tracking-widest text-white"
+    class="container mx-auto mt-4 max-w-5xl bg-slate-950 font-black uppercase tracking-widest text-white w-full"
   >
     <div
       style="clip-path: polygon(100% 0, 60% 0, 100% 100%)"
@@ -52,6 +54,7 @@ const { title } = Astro.props;
     <Nav client:load />
     <div class="relative px-8 my-12 md:my-24">
       <slot />
+      <Footer />
     </div>
     <script src="../js/main.js"></script>
   </body>
