--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,7 +76,7 @@ const services: service[] = [
         </div>
       </div>
       <div
-        data-aos="fade-left"
+        data-aos="fade-right"
         class="lg:w-1/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0"
       >
         <h2 class="text-lg mb-1 font-medium title-font text-orange-500">
