Corrected padding and margins add divider in nav

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import Logo from "../assets/images/LogoCycles.webp";
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="body-font">
+<footer class="mt-6 md:mt-16">
   <div class="flex items-center sm:flex-row flex-col">
     <Image src={Logo} alt="Logo" class="w-2/6 md:w-1/12" />
 
@@ -15,7 +15,7 @@ const currentYear = new Date().getFullYear();
     >
       {currentYear}© —
       <a
-        href="https://twitter.com/knyttneve"
+        href="mailto:daveronan90@gmail.com"
         class="ml-1"
         rel="noopener noreferrer"
         target="_blank">daveronan90@gmail.com</a
