--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const { title } = Astro.props;
   </head>
 
   <body
-    class="container mx-auto mt-4 max-w-5xl bg-slate-950 font-black uppercase tracking-widest text-white w-full"
+    class="container mx-auto max-w-5xl bg-slate-950 font-black uppercase tracking-widest text-white w-full"
   >
     <div
       style="clip-path: polygon(100% 0, 60% 0, 100% 100%)"
@@ -52,7 +52,10 @@ const { title } = Astro.props;
     >
     </div>
     <Nav client:load />
-    <div class="relative px-8 my-12 md:my-24">
+    <div class="h-[.1rem] bg-gray-200 rounded overflow-hidden relative z-20">
+      <div class="w-24 h-full bg-orange-600"></div>
+    </div>
+    <div class="relative mx-6 my-6 md:my-24">
       <slot />
       <Footer />
     </div>
