--- a/src/pages/classes.astro
+++ b/src/pages/classes.astro
@@ -3,12 +3,10 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Farrell Fitness | Classes">
-  <section class="body-font">
-    <div class="pb-24">
+  <section class="">
+    <div class="">
       <div class="flex flex-col">
-        <div class="h-1 bg-gray-200 rounded overflow-hidden">
-          <div class="w-24 h-full bg-orange-600"></div>
-        </div>
+
         <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
           <h1 class="sm:w-2/5 font-medium title-font text-2xl mb-2 sm:mb-0">
             Space The Final Frontier
