--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const services: service[] = [
 
 <Layout title="Farrell Fitness | Gym & Performance Center">
   <div data-aos="fade" class="flex justify-center items-center">
-    <Image src={Logo} alt="Logo" />
+    <Image src={Logo} alt="Logo" loading="eager"/>
   </div>
   <ul class="flex flex-wrap">
     {
@@ -44,8 +44,8 @@ const services: service[] = [
     }
   </ul>
 
-  <section class="body-font relative">
-    <div class="py-24 mx-auto flex sm:flex-nowrap flex-wrap">
+  <section class="relative my-12">
+    <div class="mx-auto flex sm:flex-nowrap flex-wrap">
       <div
         data-aos="fade-right"
         class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative"
