--- a/src/pages/results.astro
+++ b/src/pages/results.astro
@@ -3,8 +3,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Farrell Fitness | Results">
-  <section class="body-font">
-    <div class="pb-24 flex flex-wrap">
+  <section class="">
+    <div class="flex flex-wrap">
       <div class="flex w-full mb-20 flex-wrap">
         <h1
           class="sm:text-3xl text-2xl font-medium title-font lg:w-1/3 lg:mb-0 mb-4"
