--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const services: service[] = [
     <div class="mx-auto flex sm:flex-nowrap flex-wrap">
       <div
         data-aos="fade-right"
-        class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative"
+        class="lg:w-2/3 md:w-1/2 bg-gray-300 overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative -mx-6 md:ml-0"
       >
         <iframe
           class="absolute inset-0"
