--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const { title } = Astro.props;
   </head>
 
   <body
-    class="container mx-auto max-w-5xl bg-slate-950 font-black uppercase tracking-widest text-white w-full"
+    class="container mx-auto max-w-5xl bg-slate-950 font-medium uppercase tracking-widest text-white w-full"
   >
     <div
       style="clip-path: polygon(100% 0, 60% 0, 100% 100%)"
