--- a/src/pages/results.astro
+++ b/src/pages/results.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -9,58 +10,72 @@ import Layout from "../layouts/Layout.astro";
         <h1
           class="sm:text-3xl text-2xl font-medium title-font lg:w-1/3 lg:mb-0 mb-4"
         >
-          Master Cleanse Reliac Heirloom
+          transformations<br />results & reviews
         </h1>
-        <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-base">
-          Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical
-          gentrify, subway tile poke farm-to-table. Franzen you probably haven't
-          heard of them man bun deep jianbing selfies heirloom.
+        <p class="lg:pl-6 lg:w-2/3 mx-auto text-xs font-normal">
+          Be inspired by member transformations, tangible results, and rave
+          reviews at Farrell Fitness. Witness stunning before-and-after photos,
+          experience evidence-based training programs, and join our welcoming
+          community. Achieve weight loss, strength gains, and athletic
+          improvements. Start your journey to a healthier, fitter you today!
         </p>
       </div>
       <div class="flex flex-wrap md:-m-2 -m-1">
         <div class="flex flex-wrap w-1/2">
           <div class="md:p-2 p-1 w-1/2">
-            <img
+            <Image
+              width={500}
+              height={300}
               alt="gallery"
               class="w-full object-cover h-full object-center block"
-              src="https://dummyimage.com/500x300"
+              src="https://images.pexels.com/photos/6701941/pexels-photo-6701941.jpeg?auto=compress&cs=tinysrgb&w=400"
             />
           </div>
           <div class="md:p-2 p-1 w-1/2">
-            <img
+            <Image
+              width={500}
+              height={300}
               alt="gallery"
               class="w-full object-cover h-full object-center block"
-              src="https://dummyimage.com/501x301"
+              src="https://images.pexels.com/photos/16495748/pexels-photo-16495748/free-photo-of-muscular-model-posing-in-outdoor-gym.jpeg?auto=compress&cs=tinysrgb&w=400"
             />
           </div>
           <div class="md:p-2 p-1 w-full">
-            <img
+            <Image
+              width={500}
+              height={300}
               alt="gallery"
               class="w-full h-full object-cover object-center block"
-              src="https://dummyimage.com/600x360"
+              src="https://images.pexels.com/photos/1886487/pexels-photo-1886487.jpeg?auto=compress&cs=tinysrgb&w=400"
             />
           </div>
         </div>
         <div class="flex flex-wrap w-1/2">
           <div class="md:p-2 p-1 w-full">
-            <img
+            <Image
+              width={500}
+              height={300}
               alt="gallery"
               class="w-full h-full object-cover object-center block"
-              src="https://dummyimage.com/601x361"
+              src="https://images.pexels.com/photos/35987/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=400"
             />
           </div>
           <div class="md:p-2 p-1 w-1/2">
-            <img
+            <Image
+              width={500}
+              height={300}
               alt="gallery"
               class="w-full object-cover h-full object-center block"
-              src="https://dummyimage.com/502x302"
+              src="https://images.pexels.com/photos/38630/bodybuilder-weight-training-stress-38630.jpeg?auto=compress&cs=tinysrgb&w=400"
             />
           </div>
           <div class="md:p-2 p-1 w-1/2">
-            <img
+            <Image
+              width={500}
+              height={300}
               alt="gallery"
               class="w-full object-cover h-full object-center block"
-              src="https://dummyimage.com/503x303"
+              src="https://images.pexels.com/photos/4944978/pexels-photo-4944978.jpeg?auto=compress&cs=tinysrgb&w=400"
             />
           </div>
         </div>
