Added links to the anchor tags

--- a/src/pages/classes.astro
+++ b/src/pages/classes.astro
@@ -42,7 +42,9 @@ import Layout from "../layouts/Layout.astro";
             trainers, it combines weightlifting, functional movements, and
             high-intensity exercises for maximum results.
           </p>
-          <a class="text-orange-600 inline-flex items-center mt-3"
+          <a
+            href="https://legitfit.com/authenticate/signup/FarrellFitness"
+            class="text-orange-600 inline-flex items-center mt-3"
             >Learn More
             <svg
               fill="none"
@@ -76,7 +78,9 @@ import Layout from "../layouts/Layout.astro";
             exercises like squats, deadlifts, and bench presses will target
             major muscle groups, guided by knowledgeable trainers.
           </p>
-          <a class="text-orange-600 inline-flex items-center mt-3"
+          <a
+            href="https://legitfit.com/authenticate/signup/FarrellFitness"
+            class="text-orange-600 inline-flex items-center mt-3"
             >Learn More
             <svg
               fill="none"
@@ -111,7 +115,9 @@ import Layout from "../layouts/Layout.astro";
             conditioning, and teamwork challenges for peak on-field performance.
             Unleash your team's full potential!
           </p>
-          <a class="text-orange-600 inline-flex items-center mt-3"
+          <a
+            href="https://legitfit.com/authenticate/signup/FarrellFitness"
+            class="text-orange-600 inline-flex items-center mt-3"
             >Learn More
             <svg
               fill="none"
