--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -224,9 +224,10 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </div>
     <div class="mx-auto mt-4 flex w-full pl-4">
-      <button
+      <a
+        href="https://legitfit.com/authenticate/signup/FarrellFitness"
         class="ml-auto flex rounded border-0 bg-orange-600 px-6 py-2 text-white hover:bg-orange-900 focus:outline-none"
-        >Sign up</button
+        >Sign up</a
       >
     </div>
   </section>
