--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,7 @@ const currentYear = new Date().getFullYear();
     <span
       class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start"
     >
-      <a class="">
+      <a href="https://www.facebook.com/farrellfitness17/" class="">
         <svg
           fill="currentColor"
           stroke-linecap="round"
@@ -38,21 +38,7 @@ const currentYear = new Date().getFullYear();
           ></path>
         </svg>
       </a>
-      <a class="ml-3">
-        <svg
-          fill="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          class="w-5 h-5"
-          viewBox="0 0 24 24"
-        >
-          <path
-            d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"
-          ></path>
-        </svg>
-      </a>
-      <a class="ml-3">
+      <a href="https://www.instagram.com/farrellfitness17/" class="ml-3">
         <svg
           fill="none"
           stroke="currentColor"
@@ -67,7 +53,7 @@ const currentYear = new Date().getFullYear();
           ></path>
         </svg>
       </a>
-      <a class="ml-3">
+      <a href="https://ie.linkedin.com/in/robbie-farrell-43546876" class="ml-3">
         <svg
           fill="currentColor"
           stroke="currentColor"
