--- a/src/pages/classes.astro
+++ b/src/pages/classes.astro
@@ -1,10 +1,15 @@
 ---
 import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
+import VideoPlayer from "../components/VideoPlayer";
 ---
 
 <Layout title="Farrell Fitness | Classes">
   <section class="">
+    <VideoPlayer
+      client:visible
+      videoPath="/src/assets/videos/classesVideo.mp4"
+    />
     <div class="">
       <div class="flex flex-col">
         <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
@@ -44,7 +49,7 @@ import Layout from "../layouts/Layout.astro";
           </p>
           <a
             href="https://legitfit.com/authenticate/signup/FarrellFitness"
-            class="text-orange-600 inline-flex items-center mt-3"
+            class="text-orange-600 inline-flex items-center mt-3 hover:text-orange-800"
             >Learn More
             <svg
               fill="none"
@@ -80,7 +85,7 @@ import Layout from "../layouts/Layout.astro";
           </p>
           <a
             href="https://legitfit.com/authenticate/signup/FarrellFitness"
-            class="text-orange-600 inline-flex items-center mt-3"
+            class="text-orange-600 inline-flex items-center mt-3 hover:text-orange-800"
             >Learn More
             <svg
               fill="none"
@@ -117,7 +122,7 @@ import Layout from "../layouts/Layout.astro";
           </p>
           <a
             href="https://legitfit.com/authenticate/signup/FarrellFitness"
-            class="text-orange-600 inline-flex items-center mt-3"
+            class="text-orange-600 inline-flex items-center mt-3 hover:text-orange-800"
             >Learn More
             <svg
               fill="none"
