--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import { Icon } from "astro-icon";
 import { Image } from "astro:assets";
 import Logo from "../assets/images/LogoCycles.webp";
 import Layout from "../layouts/Layout.astro";
+import VideoPlayer from "../components/VideoPlayer";
 
 interface service {
   icon: string;
@@ -27,8 +28,9 @@ const services: service[] = [
 
 <Layout title="Farrell Fitness | Gym & Performance Center">
   <div data-aos="fade" class="flex justify-center items-center">
-    <Image src={Logo} alt="Logo" loading="eager"/>
+    <Image src={Logo} alt="Logo" loading="eager" />
   </div>
+  <VideoPlayer client:visible videoPath="/src/assets/videos/OpenGym.mp4" />
   <ul class="flex flex-wrap">
     {
       services.map(({ icon, description }) => (
