--- a/src/pages/results.astro
+++ b/src/pages/results.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
+import GoogleMapsReviews from "../components/GoogleMapsReviews";
 ---
 
 <Layout title="Farrell Fitness | Results">
@@ -28,7 +29,7 @@ import Layout from "../layouts/Layout.astro";
               height={300}
               alt="gallery"
               class="w-full object-cover h-full object-center block"
-              src="https://images.pexels.com/photos/6701941/pexels-photo-6701941.jpeg?auto=compress&cs=tinysrgb&w=400"
+              src="/src/assets/images/transformation14-min.jpeg"
             />
           </div>
           <div class="md:p-2 p-1 w-1/2">
@@ -37,7 +38,7 @@ import Layout from "../layouts/Layout.astro";
               height={300}
               alt="gallery"
               class="w-full object-cover h-full object-center block"
-              src="https://images.pexels.com/photos/16495748/pexels-photo-16495748/free-photo-of-muscular-model-posing-in-outdoor-gym.jpeg?auto=compress&cs=tinysrgb&w=400"
+              src="/src/assets/images/transformation25-min.jpeg"
             />
           </div>
           <div class="md:p-2 p-1 w-full">
@@ -46,7 +47,7 @@ import Layout from "../layouts/Layout.astro";
               height={300}
               alt="gallery"
               class="w-full h-full object-cover object-center block"
-              src="https://images.pexels.com/photos/1886487/pexels-photo-1886487.jpeg?auto=compress&cs=tinysrgb&w=400"
+              src="/src/assets/images/transformation29-min.jpeg"
             />
           </div>
         </div>
@@ -57,7 +58,7 @@ import Layout from "../layouts/Layout.astro";
               height={300}
               alt="gallery"
               class="w-full h-full object-cover object-center block"
-              src="https://images.pexels.com/photos/35987/pexels-photo.jpg?auto=compress&cs=tinysrgb&w=400"
+              src="/src/assets/images/transformation18-min.jpeg"
             />
           </div>
           <div class="md:p-2 p-1 w-1/2">
@@ -66,7 +67,7 @@ import Layout from "../layouts/Layout.astro";
               height={300}
               alt="gallery"
               class="w-full object-cover h-full object-center block"
-              src="https://images.pexels.com/photos/38630/bodybuilder-weight-training-stress-38630.jpeg?auto=compress&cs=tinysrgb&w=400"
+              src="/src/assets/images/transformation3-min.jpeg"
             />
           </div>
           <div class="md:p-2 p-1 w-1/2">
@@ -75,11 +76,16 @@ import Layout from "../layouts/Layout.astro";
               height={300}
               alt="gallery"
               class="w-full object-cover h-full object-center block"
-              src="https://images.pexels.com/photos/4944978/pexels-photo-4944978.jpeg?auto=compress&cs=tinysrgb&w=400"
+              src="/src/assets/images/transformation5-min.jpeg"
             />
           </div>
         </div>
       </div>
     </div>
+    <h1 class="w-full text-center mt-12 text-2xl mb-4">Google Reviews</h1>
+    <div class="h-[0.1rem] bg-gray-100 relative">
+      <div class="absolute h-full w-1/2 bg-orange-600"></div>
+    </div>
+    <GoogleMapsReviews client:load />
   </section>
 </Layout>
