Moved assets to the public folder

--- a/src/pages/classes.astro
+++ b/src/pages/classes.astro
@@ -8,7 +8,7 @@ import VideoPlayer from "../components/VideoPlayer";
   <section class="">
     <VideoPlayer
       client:visible
-      videoPath="/src/assets/videos/classesVideo.mp4"
+      videoPath="/videos/classesVideo.mp4"
     />
     <div class="">
       <div class="flex flex-col">
