--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const services: service[] = [
   <div data-aos="fade" class="flex justify-center items-center">
     <Image src={Logo} alt="Logo" loading="eager" />
   </div>
-  <VideoPlayer client:visible videoPath="/src/assets/videos/OpenGym.mp4" />
+  <VideoPlayer client:visible videoPath="/videos/OpenGym.mp4" />
   <ul class="flex flex-wrap">
     {
       services.map(({ icon, description }) => (
